# yampd

./: Cargo.toml  README.md
src/: main.rs
src/database/: albums.rs  covers.rs  files.rs  mod.rs  songs.rs
src/player/: mod.rs  queue.rs  source.rs  speaker.rs
src/server/: config.rs  library.rs  mod.rs  player.rs
src/server/v1/: library.rs  mod.rs  player.rs
