[package]
name = "yampd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
cpal = "0.15.0"
lofty = "0.11.0"
rusqlite = "0.28.0"
serde = { version = "1.0.152", features = ["derive"] }
symphonia = { version = "0.5.2", features = ["all"] }
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }
utoipa = { version = "3.0.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
